<resources>
    <string name="app_name">Anijuan</string>
    <string name="login_welcome_title">Bienvenido :)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_action_home_title">Inicio</string>
    <string name="btn_action_anime_title">Animes</string>
    <string name="btn_action_issue_title">Emision</string>
    <string name="btn_action_see_latter_title">ver mas tarde</string>
    <string name="episode_subtitle">"Capitulo: "</string>
    <string name="close_app_confirm">¿Desea salir de la aplicacion?</string>
    <string name="btn_confirm_dialog">Confirmar</string>
    <string name="btn_cancel_dialog">Cancelar</string>
    <string name="title_activity_player">PlayerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout_title">Cerrar Sesion</string>
    <string name="episode_save_title">Capitulos Guardados</string>
    <string name="rvAnimeSave">Animes Guardados</string>
    <string name="monday_title">Lunes</string>
    <string name="tuesday_title">Martes</string>
    <string name="wednesday_title">Miercoles</string>
    <string name="thursday_title">Jueves</string>
    <string name="friday_title">Viernes</string>
    <string name="saturday_title">Sabado</string>
    <string name="sunday_title">Domingo</string>
    <string name="add_later_title">¿Guardar en ver mas tarde?</string>
    <string name="delete_later_title">Quitar de ver mas tarde</string>
    <string name="search_title">Busca Tu Anime</string>
    <string name="helper_title_search">Escriba al menos 3 caracteres</string>
    <string name="settings_title">Configuraciones</string>
    <string name="video_settings_title">Video</string>
    <string name="server_settings_title">Servidor predeterminado.</string>
    <string name="without_result_title">Sin resultados</string>
    <string name="close_video_confirm">¿Cerrar Video?</string>
</resources>